--- a/MXCash/Resource/en.lproj/Localizable.strings
+++ b/MXCash/Resource/en.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 "login_protocol2" = " <Privacy Agreement>";
 "login_toast1" = "Please enter your phone number";
 "login_toast2" = "Please enter the verification code";
+"login_agree_cancel_protocol" = "Please confirm whether you agree to agreement";
 
 // MARK: Home
 "home_title" = "Welcome to Access Cash!";
