--- a/MXCash/Resource/es.lproj/Localizable.strings
+++ b/MXCash/Resource/es.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 "login_protocol2" = " <Contrato de privacidad>";
 "login_toast1" = "Por favor introduzca su número de teléfono";
 "login_toast2" = "Introduzca el código de verificación";
+"login_agree_cancel_protocol" = "Por favor confirme si está de acuerdo con el acuerdo";
 
 // MARK: Home
 "home_title" = "¡Bienvenido a Access Cash!";
